critere quantifiant l'hetero (partie clinique)

--- a/manuscrit_G_LEFEBVRE/chap1.tex
+++ b/manuscrit_G_LEFEBVRE/chap1.tex
@@ -3,4 +3,8 @@
 \chapter{Construction du modèle}
 %\chapter{dans l'inclusion}
 Ici mon chapitre
+\begin{equation}
+\label{eq:test}
+a=b
+\end{equation}
 \end{document}
