--- a/manuscrit_G_LEFEBVRE/main.tex
+++ b/manuscrit_G_LEFEBVRE/main.tex
@@ -37,7 +37,13 @@
 %%\usepackage{fancyhdr} %%%% incompatible avec la class memoir
 
 %%%%%% MES MACROS %%%%%%%%
-\graphicspath{{../img/}} %% 
+\graphicspath{{../img/}} %%
+
+\DeclareMathOperator{\atan}{atan}
+\DeclareMathOperator{\atanh}{atanh}
+
+%\setcounter{secnumdepth}{3}
+%\setcounter{tocdepth}{3}
 
 \newcommand{\custompart}[3]{
 \part{ 
@@ -62,6 +68,7 @@
 \newcommand{\Nber}{Patient~A\xspace}
 \newcommand{\Chen}{Patient~B\xspace}
 \newcommand{\ie}{{\it i.e.}\xspace}
+\newcommand{\cf}{{\it cf.}\xspace}
 
 %%%%%% DEBUT DU DOCUMENT %%%%%%%%
 \begin{document}
