--- a/manuscrit_G_LEFEBVRE/main.tex
+++ b/manuscrit_G_LEFEBVRE/main.tex
@@ -64,6 +64,7 @@
 }
 
 \newcommand{\hetero}{hétérogénéité\xspace}
+\newcommand{\Hetero}{Hétérogénéité\xspace}
 \newcommand{\heterogene}{hétérogène\xspace}
 \newcommand{\Nber}{Patient~A\xspace}
 \newcommand{\Chen}{Patient~B\xspace}
