--- a/manuscrit_G_LEFEBVRE/main.tex
+++ b/manuscrit_G_LEFEBVRE/main.tex
@@ -56,12 +56,15 @@
 %\sc %%% small caps
 \sf %% sans serif
 \LARGE #2 }
-\newpage
+\\ \vspace{3cm}
+%\newpage
 %\begin{tabular}{p{130mm}}
 \normalsize \normalfont #3
 %\end{tabular}
 }
+%\cleardoublepage
 }
+
 
 \newcommand{\hetero}{hétérogénéité\xspace}
 \newcommand{\Hetero}{Hétérogénéité\xspace}
