Ajout image comparaison de fct de saturation

--- a/manuscrit_G_LEFEBVRE/chap_analyse_heterogeneite.tex
+++ b/manuscrit_G_LEFEBVRE/chap_analyse_heterogeneite.tex
@@ -19,7 +19,7 @@
 }
 %\lettrine[lines=2, lhang=0.33, loversize=0.25]{$\mathscr{D}$}{ans} 
 \lettrine[lines=2, lhang=0.33, loversize=0.25]{D}{ans} 
-tout ce chapitre, on considère l'approximation en un mélange de 2 gaussiennes d'un histogramme de niveau gris. Ce mélange gaussien est entièrement décrit par les paramètres suivants:
+tout ce chapitre, on considère l'approximation en un mélange de deux  gaussiennes d'un histogramme de niveau gris. Ce mélange gaussien est entièrement décrit par les paramètres suivants:
 \begin{itemize}
 \item $c_1, c_2$ : Centre des gaussiennes.
 %% Sans pertes de généralité on peut admettre que l'on a ordonné les gaussienne \ie $c_1<c_2$.
@@ -128,7 +128,7 @@ Notons que l'arctangente, n'est ni plus ni moins qu'une autre manière de sature
 
 \begin{figure}
 \centering
-\color{red}{FIGURE A METTRE}
+\includegraphics[width=0.75\textwidth]{comparaison_saturation.png}
 \caption{\label{fig:comp_saturation}Comparaison de différentes saturations}
 \end{figure}
 
@@ -190,7 +190,7 @@ Dans ce cas, l'équation~\eqref{eq:g1=g2} se réécrit :
 x=\dfrac{c_1+c_2}{2}-\dfrac{\sigma^2}{\Delta c}\ln \left( \dfrac{1-w}{w} \right).
 \end{equation}
 \end{itemize}
-\paragraph{Cas général.} Il convient ici de calculé le discriminant réduit:
+\paragraph{Cas général.} Il convient ici de calculer le discriminant réduit:
 \begin{equation}
 \label{eq:discr_reduit}
 \Delta' := B'^2 - AC = \sigma_1^2 \sigma_2^2 \left[ (\Delta c)^2 - 2(\sigma_2^2-\sigma_1^2) \ln (h_2/h_1)  \right].
